--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@ tr:nth-child(odd) {
   background-color:wheat;
 }
 
-h1,
-h2 {
+caption {
+  font-size: 28px;
   padding-top: 25px;
   padding-bottom: 25px;
 }
