--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
-body,
 table {
-  font-family: arial, sans-serif;
+  font-family: Arial, sans-serif;
   border-collapse: collapse;
   width: 800px;
 }
